--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,8 @@
 *.la
 *.lo
 
+.DS_Store
+
 # Shared objects (inc. Windows DLLs)
 *.dll
 *.so
@@ -50,3 +52,6 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+
+.vscode/
